--- a/main/climate_analysis.ipynb
+++ b/main/climate_analysis.ipynb
@@ -259,11 +259,11 @@
     "\n",
     "# Perform a query to retrieve the data and precipitation scores\n",
     "sel = [Measurement.date, func.sum(Measurement.prcp)]\n",
-    "year_date = session.query(*sel).filter(func.strftime(Measurement.date)>=dt.date(2016, 8, 23)).\\\n",
+    "year_data = session.query(*sel).filter(func.strftime(Measurement.date)>=dt.date(2016, 8, 23)).\\\n",
     "    order_by(Measurement.date).group_by(Measurement.date).all()\n",
     "\n",
     "# Save the query results as a Pandas DataFrame and set the index to the date column\n",
-    "df = pd.DataFrame(year_date, columns=['date', 'prcp'])\n",
+    "df = pd.DataFrame(year_data, columns=['date', 'prcp'])\n",
     "df = df.set_index('date')\n",
     "df.head()\n"
    ]
